compiler/testData/diagnostics/tests/typeParameters/typeParameterChainInReceiver.kt
// RUN_PIPELINE_TILL: SOURCE
// FIR_IDENTICAL
// ISSUE: KT-56212
fun <F> F.<!UNRESOLVED_REFERENCE!>X<!>.f(): Boolean = false
